# lua-rust

./: Cargo.toml  README.md  tmp_metamethod_test.lua
.agent/: RULES.md
.agent/workflows/: implement-feature.md
crates/lua-compiler/: Cargo.toml
crates/lua-compiler/src/: chunk.rs  compiler.rs  decode.rs  disasm.rs  encode.rs  lib.rs
crates/lua-core/: Cargo.toml
crates/lua-core/src/: closure.rs  error.rs  lib.rs  opcode.rs  table.rs  value.rs
crates/lua-lexer/: Cargo.toml
crates/lua-lexer/src/: lexer.rs  lib.rs  token.rs
crates/lua-parser/: Cargo.toml
crates/lua-parser/src/: ast.rs  lib.rs  parser.rs
crates/lua-repl/: Cargo.toml
crates/lua-repl/src/: main.rs
crates/lua-vm/: Cargo.toml
crates/lua-vm/src/: gc.rs  lib.rs  stdlib.rs  vm.rs
